
noinst_LTLIBRARIES = libmuparser.la

libmuparser_la_SOURCES = \
	muParserBase.cc muParserBytecode.cc muParserCallback.cc muParser.cc \
	muParserDLL.cc muParserError.cc muParserInt.cc muParserTest.cc \
	muParserTokenReader.cc \
	\
	muParserBase.h muParserBytecode.h muParserCallback.h muParserDef.h \
	muParserDLL.h muParserError.h muParserFixes.h muParser.h muParserInt.h \
	muParserStack.h muParserTemplateMagic.h muParserTest.h muParserToken.h \
	muParserTokenReader.h

libmuparser_la_CPPFLAGS = -Wno-cast-function-type
