noinst_LTLIBRARIES = libqhull.la

libqhull_la_SOURCES = \
	geom2_r.cc geom_r.cc global_r.cc io_r.cc libqhull_r.cc mem_r.cc \
	merge_r.cc poly2_r.cc poly_r.cc qset_r.cc random_r.cc rboxlib_r.cc \
	stat_r.cc usermem_r.cc userprintf_rbox_r.cc userprintf_r.cc user_r.cc \
	\
	geom_r.h io_r.h libqhull_r.h mem_r.h merge_r.h poly_r.h qhull_ra.h \
	qset_r.h random_r.h stat_r.h user_r.h

libqhull_la_LDFLAGS = -no-undefined

