
noinst_LTLIBRARIES = libtess.la

libtess_la_SOURCES = dict.cc geom.cc memalloc.cc mesh.cc normal.cc \
	priorityq.cc render.cc sweep.cc tess.cc tessmono.cc \
	\
	priorityq-heap_c.h \
	dict.h dict-list.h geom.h gl.h glu.h gluos.h memalloc.h \
	mesh.h normal.h priorityq.h priorityq-heap.h priorityq-sort.h \
	render.h sweep.h tess.h tessmono.h

libtess_la_LDFLAGS = -no-undefined

